--- a/xinwen/application/index/view/index/contact.html
+++ b/xinwen/application/index/view/index/contact.html
@@ -72,11 +72,11 @@
 					 <li><span></span></li>					 					
 					 <li>
 						 <div class="address-info">	
-							 <h4>xx路xx街道008号</h4>
+							 <h4>软件园路08号</h4>
 							 <p>xx大厦23层</p>
-							 <p>电话：1111111111</p>
-							 <p>手机: 1111111111</p>
-							 <p>邮箱: <a href="mailto:1107766400@qq.com">1107766400@qq.com</a></p>
+							 <p>电话：88888888</p>
+							 <p>手机: 15842696705</p>
+							 <p>邮箱: <a href="mailto:2395293586@qq.com">2395293586@qq.com</a></p>
 						 </div>
 					 </li>				
 				  </ul>
@@ -105,9 +105,9 @@
 		<div class="col-md-4 fotter-list">
 			<h3>联系我们</h3>
 			<ul>
-				<li><a>电话：1111111111</a></li>
-				<li><a>手机：1111111111</a></li>
-				<li><a>地址：xx路xx街道008号</a></li>
+				<li><a>电话：88888888</a></li>
+				<li><a>手机：15842696705</a></li>
+				<li><a>地址：软件园路8号</a></li>
 			</ul>
 		</div>
 		<div class="clearfix"></div>
